--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 .container {
   margin: 0 auto;
   width: 600px;
-  height: 650px;
-  background-color: black;
+  height: 475px;
+  background-color: rgb(212, 221, 230);
 }
 
 .row {
@@ -21,21 +21,19 @@
   height: 225px;
   background-size: cover;
   position: relative;
+  display: inline-block;
 }
 
 .first {
   background-image: url("../img/pd1.jpg");
-  display: inline-block;
 }
 
 .second {
   background-image: url("../img/pd2.jpg");
-  display: inline-block;
 }
 
 .third {
   background-image: url("../img/pd3.jpg");
-  display: inline-block;
 }
 
 .discount {
@@ -55,7 +53,7 @@
 }
 
 .heart {
-  font-size: 30px;
+  font-size: 25px;
   color: red;
   position:absolute;
   bottom: 2px;
